add helper function to download all geomarker data ahead of time

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(get_nei_point_summary)
 export(get_nlcd_summary)
 export(get_traffic_summary)
 export(install_elevation_data)
+export(install_geomarker_data)
 export(install_impervious)
 export(install_narr_data)
 export(install_nei_point_data)
