--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,30 @@
 url: ~
 template:
   bootstrap: 5
-
+reference:
+- title: Geomarker assessment
+  contents:
+  - get_census_tract_id
+  - get_elevation_summary
+  - get_narr_data
+  - get_nei_point_summary
+  - get_nlcd_summary
+  - get_traffic_summary
+- title: Install geomarker data sources
+  contents:
+  - install_geomarker_data
+  - install_elevation_data
+  - install_narr_data
+  - install_nei_point_data
+  - install_smoke_pm_data
+  - install_traffic
+  - install_impervious
+  - install_treecanopy
+- title: Helpers
+  contents:
+  - contiguous_us
+  - s2_states
+  - s2_tracts
+  - get_closest_year
+  - get_daily_aqs
+  - pin_file
