--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,11 @@
 Package: appc
 Title: Air Pollution Predictor Commons
 Version: 0.1.0
-Authors@R: 
+Authors@R: c(
     person("Cole", "Brokamp", , "cole@colebrokamp.com", role = c("aut", "cre"),
-           comment = c(ORCID = "0000-0002-0289-3151"))
+           comment = c(ORCID = "0000-0002-0289-3151")),
+    person("Qing", "Duan", role = "aut")
+	   )
 URL: https://github.com/geomarker-io/appc
 Description: Functions for geomarker assessment for s2 locations and dates. These are used to train and predict daily ambient air pollution concentrations across the contiguous US 2016 - 2022.
 License: MIT + file LICENSE
