doc for merra data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(get_census_tract_id)
 export(get_closest_year)
 export(get_daily_aqs)
 export(get_elevation_summary)
+export(get_merra_data)
 export(get_narr_data)
 export(get_nei_point_summary)
 export(get_nlcd_summary)
