--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -10,6 +10,7 @@ reference:
   - get_nei_point_summary
   - get_nlcd_summary
   - get_traffic_summary
+  - get_merra_data
   - install_smoke_pm_data
 - title: Helpers
   contents:
