first take on predicting for new data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,5 +19,7 @@ export(install_nei_point_data)
 export(install_smoke_pm_data)
 export(install_traffic)
 export(install_treecanopy)
+export(predict_pm25)
 export(s2_states)
 export(s2_tracts)
+importFrom(grf,predict)
