--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,4 +22,4 @@ export(install_treecanopy)
 export(predict_pm25)
 export(s2_states)
 export(s2_tracts)
-importFrom(grf,predict)
+importFrom(grf,predict.regression_forest)
