ditch treecanopy for now, just urban imperviousness

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,16 +9,15 @@ export(get_elevation_summary)
 export(get_merra_data)
 export(get_narr_data)
 export(get_nei_point_summary)
-export(get_nlcd_summary)
 export(get_traffic_summary)
+export(get_urban_imperviousness)
 export(install_elevation_data)
-export(install_impervious)
 export(install_merra_data)
 export(install_narr_data)
 export(install_nei_point_data)
 export(install_smoke_pm_data)
 export(install_traffic)
-export(install_treecanopy)
+export(install_urban_imperviousness)
 export(predict_pm25)
 export(s2_states)
 export(s2_tracts)
