--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -12,6 +12,8 @@ reference:
   - get_traffic_summary
   - get_merra_data
   - install_smoke_pm_data
+- title: Air pollution assessment
+  - predict_pm25
 - title: Helpers
   contents:
   - contiguous_us
