--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -2,8 +2,8 @@
 justfile
 Dockerfile
 model
-inst/rf_pm.rds
-inst/training_data.rds
+rf_pm.rds
+training_data.rds
 ^\.github$
 ^codecov\.yml$
 ^.env$
