only use urban imperviousness product (#38)
- vintage 2021 NLCD imperviousness product now available
- remove treecanopy code for now
- include pre-installed versions of data in release assets

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,9 +1,9 @@
 ^LICENSE\.md$
-inst/training_data.rds
-inst/rf_pm.rds
 justfile
 Dockerfile
 model
+rf_pm.rds
+training_data.rds
 ^\.github$
 ^codecov\.yml$
 ^.env$
