docker files fixes

--- a/Dockerfile.testing
+++ b/Dockerfile.testing
@@ -21,3 +21,5 @@ RUN R CMD build appc
 RUN R CMD INSTALL appc_*.tar.gz
 
 RUN R CMD check --as-cran --no-manual --no-vignettes appc_*.tar.gz
+
+RUN R -e "example(predict_pm25, package = 'appc')"
