--- a/Dockerfile.testing
+++ b/Dockerfile.testing
@@ -1,5 +1,6 @@
 FROM ghcr.io/rocker-org/r-ver:4.3.1
 
+# pak usually can install system deps, but JIC:
 RUN apt-get update \
     && apt-get install -yqq --no-install-recommends \
     libcurl4-openssl-dev \
@@ -8,11 +9,14 @@ RUN apt-get update \
     libssl-dev libudunits2-dev \
     && apt-get clean
 
-RUN R --quiet -e "install.packages('pak', repos = c(CRAN = 'https://packagemanager.rstudio.com/all/__linux__/focal/latest'))"
+RUN Rscript -e "install.packages('pak')"
 
 COPY DESCRIPTION ./DESCRIPTION
 
-RUN R --quiet -e "pak::local_install_dev_deps()"
+RUN Rscript \
+      # -e "options(repos = c(CRAN = 'https://p3m.dev/cran/__linux__/jammy/latest'))" \
+      -e "pak::pak('dplyr')" \
+      -e "pak::local_install_dev_deps()"
 
 COPY ./ /appc/
 
@@ -22,4 +26,4 @@ RUN R CMD INSTALL appc_*.tar.gz
 
 RUN R CMD check --as-cran --no-manual --no-vignettes appc_*.tar.gz
 
-RUN R -e "example('predict_pm25', package = 'appc')"
+RUN Rscript -e "library(appc)" -e "example(predict_pm25)"
