--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(get_elevation_summary)
 export(get_merra_data)
 export(get_narr_data)
 export(get_nei_point_summary)
+export(get_smoke_data)
 export(get_traffic_summary)
 export(get_urban_imperviousness)
 export(install_elevation_data)
