--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,13 +7,14 @@ export(get_census_tract_id)
 export(get_closest_year)
 export(get_daily_aqs)
 export(get_elevation_summary)
+export(get_hms_smoke_data)
 export(get_merra_data)
 export(get_narr_data)
 export(get_nei_point_summary)
-export(get_smoke_data)
 export(get_traffic_summary)
 export(get_urban_imperviousness)
 export(install_elevation_data)
+export(install_hms_smoke_data)
 export(install_merra_data)
 export(install_narr_data)
 export(install_nei_point_data)
