--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,8 @@ Imports:
     tibble,
     scales,
     dotenv,
-    mappp
+    mappp,
+    withr
 RoxygenNote: 7.2.3
 Suggests: 
     testthat (>= 3.0.0)
