NOAA HMS smoke (#51)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,16 +7,17 @@ export(get_census_tract_id)
 export(get_closest_year)
 export(get_daily_aqs)
 export(get_elevation_summary)
+export(get_hms_smoke_data)
 export(get_merra_data)
 export(get_narr_data)
 export(get_nei_point_summary)
 export(get_traffic_summary)
 export(get_urban_imperviousness)
 export(install_elevation_data)
+export(install_hms_smoke_data)
 export(install_merra_data)
 export(install_narr_data)
 export(install_nei_point_data)
-export(install_smoke_pm_data)
 export(install_traffic)
 export(install_urban_imperviousness)
 export(predict_pm25)
