--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,6 +33,9 @@ Imports:
     withr
 RoxygenNote: 7.2.3
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Config/testthat/parallel: true
+VignetteBuilder: knitr
