--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,8 +33,11 @@ Imports:
     withr
 RoxygenNote: 7.2.3
 Suggests: 
+    ggplot2,
     knitr,
     rmarkdown,
+    curl,
+    viridis,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Config/testthat/parallel: true
