use cli for better progress messages

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,25 +12,26 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 Imports: 
+    cli,
+    dotenv,
     dplyr,
-    grf,
-    tidyr,
-    s2,
+    fs,
     glue,
-    readr,
+    grf,
+    httr,
+    mappp,
     purrr,
-    tigris,
+    readr,
+    rlang,
+    s2,
+    scales,
     sf,
     terra,
-    fs,
-    httr,
-    tidync,
-    rlang,
     tibble,
-    scales,
-    dotenv,
-    mappp,
-    withr
+    tidync,
+    tidyr,
+    tigris,
+    withr,
 RoxygenNote: 7.2.3
 Suggests: 
     ggplot2,
