--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,7 +44,8 @@ Suggests:
     lubridate,
     tidync,
     tigris,
-    viridis
+    viridis, 
+    lubridate
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 VignetteBuilder: knitr
