--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,7 +41,8 @@ Suggests:
     rmarkdown,
     scales,
     testthat (>= 3.0.0),
-    viridis
+    viridis, 
+    lubridate
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 VignetteBuilder: knitr
