--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,6 +42,7 @@ Suggests:
     scales,
     testthat (>= 3.0.0),
     tidync,
+    tigris,
     viridis
 Config/testthat/edition: 3
 Config/testthat/parallel: true
