--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,6 +43,7 @@ Suggests:
     testthat (>= 3.0.0),
     lubridate,
     tidync,
+    tigris,
     viridis
 Config/testthat/edition: 3
 Config/testthat/parallel: true
