--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,6 +35,7 @@ Suggests:
     ggplot2,
     hexbin,
     knitr,
+    lubridate,
     lwgeom,
     mappp,
     readr,
@@ -44,8 +45,7 @@ Suggests:
     lubridate,
     tidync,
     tigris,
-    viridis, 
-    lubridate
+    viridis
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 VignetteBuilder: knitr
