add gridmet function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,12 @@ export(create_daily_merra_data)
 export(get_closest_year)
 export(get_daily_aqs)
 export(get_elevation_summary)
+export(get_gridmet_data)
 export(get_hms_smoke_data)
 export(get_merra_data)
 export(get_narr_data)
 export(install_elevation_data)
+export(install_gridmet_data)
 export(install_hms_smoke_data)
 export(install_merra_data)
 export(install_narr_data)
