--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,11 @@ export(get_gridmet_data)
 export(get_hms_smoke_data)
 export(get_merra_data)
 export(get_narr_data)
+export(get_nlcd_frac_imperv)
 export(install_elevation_data)
 export(install_gridmet_data)
 export(install_hms_smoke_data)
 export(install_merra_data)
 export(install_narr_data)
+export(install_nlcd_frac_imperv_data)
 export(predict_pm25)
