predict_pm25_date_range() interface to get model predictions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,3 +18,4 @@ export(install_merra_data)
 export(install_narr_data)
 export(install_nlcd_frac_imperv_data)
 export(predict_pm25)
+export(predict_pm25_date_range)
