latlon_to_s2_cell() helper

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,5 +17,6 @@ export(install_hms_smoke_data)
 export(install_merra_data)
 export(install_narr_data)
 export(install_nlcd_frac_imperv_data)
+export(latlon_to_s2_cell)
 export(predict_pm25)
 export(predict_pm25_date_range)
