traffic tests and examples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,12 +11,14 @@ export(get_hms_smoke_data)
 export(get_merra_data)
 export(get_narr_data)
 export(get_nlcd_frac_imperv)
+export(get_traffic_summary)
 export(install_elevation_data)
 export(install_gridmet_data)
 export(install_hms_smoke_data)
 export(install_merra_data)
 export(install_narr_data)
 export(install_nlcd_frac_imperv_data)
+export(install_traffic)
 export(latlon_to_s2_cell)
 export(predict_pm25)
 export(predict_pm25_date_range)
