--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(get_gridmet_data)
 export(get_hms_smoke_data)
 export(get_merra_data)
 export(get_narr_data)
+export(get_nei_point_summary)
 export(get_nlcd_frac_imperv)
 export(get_traffic_summary)
 export(install_elevation_data)
@@ -17,6 +18,7 @@ export(install_gridmet_data)
 export(install_hms_smoke_data)
 export(install_merra_data)
 export(install_narr_data)
+export(install_nei_point_data)
 export(install_nlcd_frac_imperv_data)
 export(install_traffic)
 export(latlon_to_s2_cell)
