add function to install daily PM2.5 averages from AQS datamart

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(get_narr_data)
 export(get_nei_point_summary)
 export(get_nlcd_frac_imperv)
 export(get_traffic_summary)
+export(install_aqs)
 export(install_elevation_data)
 export(install_gridmet_data)
 export(install_hms_smoke_data)
